# sirius-campus

./: .gitignore  Dockerfile  FRONTEND-GUIDELINES.md  LICENSE  README.md  auth-module.md  auth-service.yaml  campus  docker-compose.yml  main.py  pyproject.toml  requirements.txt  technical-1  tz-0-api-contracts-and-code-standards.md  tz-1-database-models.md
application-service/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt  run_tests.ps1  run_tests.sh
application-service/alembic/: env.py
application-service/alembic/versions/: 001_initial_applications.py
application-service/docs/: CONTRACTS.md  DATABASE.md  INFRASTRUCTURE.md
application-service/proto/: application.proto
application-service/src/: database.py  dependencies.py  main.py
application-service/src/api/v1/applications/: routers.py  schemas.py
application-service/src/config/: __init__.py  app.py  auth_grpc.py  database.py  minio.py
application-service/src/constants/: __init__.py  document_type.py  error_codes.py
application-service/src/domain/: __init__.py  entities.py  exceptions.py
application-service/src/exceptions/: handlers.py
application-service/src/grpc_clients/: auth_client.py
application-service/src/grpc_server/: __init__.py  grpc_mapping.py  server.py
application-service/src/middleware/: tracing.py
application-service/src/models/: __init__.py  application.py  application_document.py  base.py
application-service/src/repositories/: __init__.py  application_document_repository.py  application_repository.py
application-service/src/services/: __init__.py  application_service.py
application-service/src/storage/: __init__.py  minio_storage.py
application-service/tests/: conftest.py
application-service/tests/api/: test_applications_api.py
application-service/tests/unit/: test_application_service_decide.py  test_application_service_download.py  test_application_service_list.py  test_constants.py  test_domain_exceptions.py  test_exception_handler.py
auth-service/: .env.example  Dockerfile  alembic.ini  pyproject.toml
auth-service/alembic/: env.py
coworking-module/: coworking_module.md  coworking_module.yaml
coworking-service/: Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
docs/: LOKI-GRAFANA.md
duty-service/: .dockerignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  duty-service.md  duty-service.yaml  requirements.txt
frontend/: .env.example  DESIGN-SYSTEM.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
gateway/: Dockerfile  README.md  nginx.conf  requirements.txt
patrol-service/: .env.example  Dockerfile  README.md  contracts.md  docker-compose.yml  general.md  openapi.yaml  pyproject.toml  requirements.txt
rules-and-context/: BUSINESS_RULES.md  FRONTEND-GUIDELINES.md  PYTHON-GUIDELINES.md
src/: __init__.py  main.py
tests/: test_auth.py
(+209 files in other folders)
